tenzir/tests/exec/expr/escape/basic/incomplete_sequence.tql
// error: true

from {
  x: "\u11",
}
